language/move-lang/tests/move_check/expansion/duplicate_field.move
module 0x8675309::M {
    struct S {
        f: u64,
        f: u64,
    }
}
